2005-11-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/IOR.java (equals, hasCode): Compare port number as well
	and do not crash on IOR.Internet==null.

2005-11-06  Mark Wielaard  <mark@klomp.org>

	* javax/swing/Timer.java (Waker.run): Test and set running while
	holding queueLock.
	(start): Set running to true.
	(stop): Unconditionally notify queueLock.
	(queueEvent): Only called when queueLock already held.

2005-11-06  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_setGradientUnlocked): Update
	debug output to reflect actual situation.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_setTexturePixelsUnlocked):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_drawPixels): Adjust
	formatting.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSetMatrixUnlocked):
	Update debug output to reflect actual situation.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSetRGBAColorUnlocked):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoCurveTo): Adjust
	formatting.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoRelCurveTo): Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoRectangle): Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSurfaceSetFilterUnlocked):
	Update debug output to reflect actual situation.

2005-11-06  Mark Wielaard  <mark@klomp.org>

	* java/awt/image/AreaAveragingScaleFilter.java: Add FIXME
	* java/awt/Image.java (getScaledInstance): In case of
	SCALE_AREA_AVERAGING use AreaAveragingScaleFilter.

2005-11-06  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/event/PrintEvent.java,
	javax/print/event/PrintJobAdapter.java,
	javax/print/event/PrintJobAttributeEvent.java,
	javax/print/event/PrintJobAttributeListener.java,
	javax/print/event/PrintJobEvent.java,
	javax/print/event/PrintJobListener.java,
	javax/print/event/PrintServiceAttributeEvent.java,
	javax/print/event/PrintServiceAttributeListener.java,