@@ -1,3 +1,10 @@
+2005-11-07  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/plaf/basic/BasicComboBoxEditor.java: API docs plus
+	(BasicComboBoxEditor): set border to null and columns to 9,
+	(addActionListener): implemented,
+	(removeActionListener): implemented.
+
 2005-11-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* gnu/CORBA/IOR.java (equals, hasCode): Compare port number as well
